# Mount-IOS-Linux

./: .SRCINFO  .gitignore  PKGBUILD  README.md  RELEASE.md  ios-mount-gui.desktop
ios_mount_gui/: README.md  build_appimage.sh  main.py  pyproject.toml
ios_mount_gui/appimage/: AppRun  ios-mount-gui.desktop  wrapper.py
ios_mount_gui/backend/: server.py
ios_mount_gui/bundled/libs/: libfuse3.so.4  libimobiledevice-1.0.so.6  libplist-2.0.so.4  libusbmuxd-2.0.so.7
